kubernetes/rabbitmq/overlays/demo/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
  annotations:
    kubernetes.io/spec.ingressClassName: azure/application-gateway
spec:
  rules:
    - host: aks-mfolabs.francecentral.cloudapp.azure.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
          - pathType: Prefix
            path: /*
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
